# raspberry5_test

./: README.md
cpp/camera/camera_preview_rpicam-vid/: build_run.sh  camera_preview.cpp
cpp/kernel/realtime_thread/: README.md  build-run.sh  realtime_thread.cpp
cpp/video/video_encode_decode/: CMakeLists.txt  build_run.sh  main.cpp
python/audio/ai_chat/: audio_capture.py  config.py  llm_qwen.py  main.py  stt_sherpa.py  tts_edge.py
python/audio/open_wake_word/: audio_open_wake_word.py
python/audio/sherpa-onnx/: audio_sherpa_kws.py
python/audio/silero_vad/: audio_silero_vad_file.py  audio_silero_vad_gst.py
python/camera/: camera_preview_cv.py  camera_preview_gst.py  camera_preview_rpicam-hello.py
python/yolo/: yolo8_detection_default_track.py  yolo8_detection_head_track.py  yolo8_detection_person_track.py  yolo8_detection_person_track_hailo.py
